test/bad/estmt-in.c
int main(void)
{
	/* An empty statement should cause parse error. */
	printf("Hello world!\n");;
}
